<resources>
    <string name="app_name"> NOT WORKING</string>
    <string name="hint"> Tap to Record </string>
    <string name="title_activity_login">MedText</string>

    <string name="hello">Hello World, FileExplore!</string>

    <!-- Strings related to mainActivity -->
    <string name="textView2">"Patient: "</string>
    <string name="saveTime" translatable="false"> </string>
    <string name="saveTimePrompt">"Last Saved: "</string>
    <string name="savedName" translatable="false"> </string>
    <string name="undo">Undo</string>
    <string name="save">Save</string>
    <string name="savedAs">Saved as: </string>


    <!-- Strings related to login -->
    <string name="prompt_identification">Patient Identification</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_birthdate">Birthdate</string>
    <string name="or"> or </string>
    <string name="action_access"> Write File </string>
    <string name="action_read"> Read File</string>
    <string name="error_invalid_lastname">This last name is invalid</string>
    <string name="error_invalid_birthdate">This birthdate is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Spinner -->
    <string name="language_prompt">Language</string>

    <string-array name="language_arrays">
        <item><string name="settings">Settings</string></item>
        <item>English</item>
        <item>Español</item>
        <item>हिंदी</item>
        <item>العربية</item>
    </string-array>
    <string name="textView3"></string>


</resources>
